SVGTRefElement shouldn't create a shadow root dynamically. https://bugs.webkit.org/show_bug.cgi?id=77938

Patch by Shinya Kawanaka <shinyak@google.com> on 2012-02-12
Reviewed by Hajime Morita.

Source/WebCore:

SVGTRefElement creates a shadow root dynamically. This will cause a problem to support
multiple shadow subtrees. So it should be created in a constructor phase.

Test: svg/custom/tref-shadowdom.html

* svg/SVGTRefElement.cpp:
(WebCore::SVGTRefElement::create):
(WebCore::SVGTRefElement::createShadowSubtree):
(WebCore):
(WebCore::SVGTRefElement::updateReferencedText):
* svg/SVGTRefElement.h:
(SVGTRefElement):

LayoutTests:

Checks a shadow root exists of tref element in cases xlink:href is set and is not set.

* svg/custom/tref-shadowdom-expected.txt: Added.
* svg/custom/tref-shadowdom.html: Added.

Canonical link: https://commits.webkit.org/95385@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@107523 268f45cc-cd09-0410-ab3c-d52691b4dbfc